added media query styles

--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
 
     
 
-    <div id="main-container" class="container">
+    <main id="main-container" class="container">
 
         <section class="main-section">
 
-            <h1>Contact</h1>
+            <h2>Contact</h2>
 
             <form id="contact-form">
 
@@ -78,7 +78,7 @@
 
         </section>
 
-        <section class="sidebar">
+        <aside class="sidebar">
 
             <div id="connect">
 
@@ -92,9 +92,9 @@
 
             </div>
 
-        </section>
+        </aside>
 
-    </div>
+    </main>
 
     <footer>
     
