--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     
 
-    <div id="main-container" class="container">
+    <main id="main-container" class="container">
 
         <section class="main-section">
 
-            <h1>About Me</h1>
+            <h2>About Me</h2>
 
             <img class="auth-image" src="assets/images/20180123_203640.jpg" alt="David Scherer-ODell">
 
@@ -48,7 +48,7 @@
             <p>I have been coding for about 2 years now, and am a volunteer web designer for my Church, <a href="http://www.holycovenantumc.org/" target="_blank">Holy Covenant United Methodist Church</a>. I am currently attending the Northwestern Coding Boot Camp, where I hope to gain the skills to jumpstart my career as a fullstack developer. If you like my works, please feel free to get in contact with me!</p>
         </section>
 
-        <section class="sidebar">
+        <aside class="sidebar">
 
             <div id="connect">
 
@@ -62,9 +62,9 @@
 
             </div>
 
-        </section>
+        </aside>
 
-    </div>
+    </main>
 
     <footer>
     
