--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
 
     
 
-    <div id="main-container" class="container">
+    <main id="main-container" class="container">
 
         <section class="main-section">
 
-            <h1>Portfolio</h1>
+            <h2>Portfolio</h2>
 
             <div class="work">
 
@@ -84,7 +84,7 @@
 
         </section>
 
-        <section class="sidebar">
+        <aside class="sidebar">
 
             <div id="connect">
 
@@ -98,9 +98,9 @@
 
             </div>
 
-        </section>
+        </aside>
 
-    </div>
+    </main>
 
     <footer>
     
